tests/unit/default/syntax-error/055-create-table-parens-name-colon-type-parenses-default.e.t
---- IN ----
+%table(id:decimal()=42
---- OUT ----
---- ERR ----
syntax: expected `)` after `...cimal()=42` instead of EOL at position 23 - at line 1
---- EXIT ----
1
